--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <div class="row mb-n10">
                 <div class="col-lg-6 mb-10 col-md-12 order-2 order-lg-1" data-aos="fade-right" data-aos-delay="500">
                     <div class="history-imageown">
-                        <img class="fit-imageown" src="assets/images/slider/pngegg.png" alt="">
+                        <img class="fit-imageown" src="assets/images/news/WhatsApp Image 2025-07-12 at 04.28.16.jpeg" alt="">
                     </div>
                 </div>
                 <style>
@@ -341,7 +341,7 @@
                     .fit-imageown {
                         width: 100%;
                         height: 100%;
-
+                        object-fit: fill;
                         /* ensures image covers the div */
                         display: block;
                     }
@@ -569,7 +569,7 @@
                                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab"
                                         href="#tab-item-architecture">Residential</a></li>
                                 <li class="nav-item"><a class="nav-link" data-bs-toggle="tab"
-                                        href="#tab-item-all">Residential</a></li>
+                                        href="#tab-item-all">Commercial</a></li>
 
                             </ul>
                             <!-- Tabs Header End -->
@@ -607,7 +607,7 @@
                                                 </a>
                                             </div>
                                             <div class="content">
-                                                <h4 class="subtitle">Residential</h4>
+                                                <h4 class="subtitle">Commercial</h4>
                                                 <h3 class="title"><a href="project.html">Cleo County</a></h3>
                                                 <h3 class="title"><a href="project.html">Sector 121 Noida</a></h3>
                                             </div>
@@ -663,7 +663,7 @@
                                                 </a>
                                             </div>
                                             <div class="content">
-                                                <h4 class="subtitle">Residential</h4>
+                                                <h4 class="subtitle">Commercial</h4>
                                                 <h3 class="title"><a href="project.html">County Wave City NH 24
                                                         Ghaziabad</a></h3>
                                             </div>
@@ -1222,9 +1222,9 @@
                             <p class="ps-3 col-md-9">Coco County is a new residential project in Sector 10...</p>
                         </div>
                         <div class="review-card">
-                            <img src="./assets/images/news/Cherry-County (1).jpg" alt="Coco County">
+                            <img src="./assets/images/news/Olive-County.jpg" alt="Coco County">
                             <div class="card-body-realstate px-3 py-2">
-                                <h3>Coco County</h3>
+                                <h3>Olive County</h3>
 
                                 <button class="btnn">Enquiry</button>
                             </div>
@@ -1242,23 +1242,23 @@
                         <div class="review-card">
                             <img src="./assets/images/news/Cherry-County (1).jpg" alt="Coco County">
                             <div class="card-body-realstate px-3 py-2">
-                                <h3>Coco County</h3>
+                                <h3>Cherry County</h3>
 
                                 <button class="btnn">Enquiry</button>
                             </div>
                             <p class="ps-3 col-md-9">Coco County is a new residential project in Sector 10...</p>
                         </div>
                         <div class="review-card">
-                            <img src="./assets/images/news/Cherry-County (1).jpg" alt="Coco County">
+                            <img src="./assets/images/news/DELHICounty-Courtyard.jpg" alt="Coco County">
                             <div class="card-body-realstate px-3 py-2">
-                                <h3>Coco County</h3>
+                                <h3>lvy County</h3>
 
                                 <button class="btnn">Enquiry</button>
                             </div>
                             <p class="ps-3 col-md-9">Coco County is a new residential project in Sector 10...</p>
                         </div>
                         <div class="review-card">
-                            <img src="./assets/images/news/Cherry-County (1).jpg" alt="Coco County">
+                            <img src="./assets/images/news/Coco-County (1).jpg" alt="Coco County">
                             <div class="card-body-realstate px-3 py-2">
                                 <h3>Coco County</h3>
 
@@ -1290,6 +1290,15 @@
                     <div class="mb-3">
                         <input type="date" class="p-3 ps-5 form-control rounded-pill fs-4">
                     </div>
+                     <style>
+    /* Reduce padding & font-size for small screens */
+    @media (max-width: 576px) {
+      input[type="date"] {
+        font-size: 1.3rem !important;
+        padding: 1rem 1rem !important;
+      }
+    }
+  </style>
 
                     <div class="  mb-3 p">
                         <input type="text" class=" p-3 ps-5 form-control rounded-pill fs-4" placeholder="Select time">
