--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@
                             placeholder="Enter your Email">
                     </div>
                     <div class="mb-3">
-                        <input type="date" class="p-3 ps-5 form-control rounded-pill fs-4">
+                        <input type="date" class="p-3 ps-5 bg-white rounded-pill fs-4">
                     </div>
                      <style>
     /* Reduce padding & font-size for small screens */
