--- a/index.html
+++ b/index.html
@@ -151,12 +151,13 @@
             /* Full width for mobile */
         }
     }
+
     .navbar-toggler:focus {
-  box-shadow: none;
-  outline: none;
-  border: none;
-  border-radius: 15px;
-}
+        box-shadow: none;
+        outline: none;
+        border: none;
+        border-radius: 15px;
+    }
 </style>
 
 <body>
@@ -327,7 +328,8 @@
             <div class="row mb-n10">
                 <div class="col-lg-6 mb-10 col-md-12 order-2 order-lg-1" data-aos="fade-right" data-aos-delay="500">
                     <div class="history-imageown">
-                        <img class="fit-imageown" src="assets/images/news/WhatsApp Image 2025-07-12 at 04.28.16.jpeg" alt="">
+                        <img class="fit-imageown" src="assets/images/news/WhatsApp Image 2025-07-12 at 04.28.16.jpeg"
+                            alt="">
                     </div>
                 </div>
                 <style>
@@ -1194,12 +1196,12 @@
 
         <!--  -->
         <div style="padding: 30px;">
-           
+
 
             <div class="slider-container">
                 <div class="text-center py-5 my-5 ">
-            <h2 class="fw-bold">Gallery</h2>
-           </div>
+                    <h2 class="fw-bold">Gallery</h2>
+                </div>
                 <div class="card-slider-real-state-wrapper">
                     <div class="card-slider-real-state" id="slider">
                         <!-- Card Items -->
@@ -1231,7 +1233,7 @@
                             <p class="ps-3 col-md-9">Coco County is a new residential project in Sector 10...</p>
                         </div>
                         <div class="review-card">
-                            <img  src="assets/images/news/County-Street.jpg" alt="Coco County">
+                            <img src="assets/images/news/County-Street.jpg" alt="Coco County">
                             <div class="card-body-realstate px-3 py-2">
                                 <h3>Ivory Street</h3>
 
@@ -1288,17 +1290,9 @@
                             placeholder="Enter your Email">
                     </div>
                     <div class="mb-3">
-                        <input type="date" class="p-3 ps-5 bg-white rounded-pill fs-4">
+                        <input type="date" class="form-control rounded-pill p-3 fs-4" placeholder="Select Date" />
                     </div>
-                     <style>
-    /* Reduce padding & font-size for small screens */
-    @media (max-width: 576px) {
-      input[type="date"] {
-        font-size: 1.3rem !important;
-        padding: 1rem 1rem !important;
-      }
-    }
-  </style>
+
 
                     <div class="  mb-3 p">
                         <input type="text" class=" p-3 ps-5 form-control rounded-pill fs-4" placeholder="Select time">
@@ -1400,7 +1394,7 @@
                             <li class="mb-3"><a href="contact.html">Contact</a></li>
                         </ul>
                         <!-- Footer Nav End -->
-                         
+
 
                         <!-- Contact Info Start -->
                         <div class="contact-info">Registered Add-1186, Gr. Floor, Sec-4B, <br> Vasundhara, Gzb. (U.P.)
