--- a/about.html
+++ b/about.html
@@ -792,13 +792,10 @@
                     <!-- Footer Nav End -->
 
                     <!-- Contact Info Start -->
-                    <div class="contact-info">Registered Add-1186, Gr. Floor, Sec-4B, <br> Vasundhara, Gzb. (U.P.)
-                        Branch office- KO-003, <br> Sector - 116, Noida, Opposite Ivory County <br> <a
-                            href="tel:+012-345-6789-00"><i class="fa-solid fa-phone-volume"></i>
-                            +91 9811021105,
-                            +91 9811021104</a> <br> <a href="mailto:hello@consulte.co"><i
-                                class="fa-regular fa-envelope"></i> sarasrealty@gmail.com</a></div>
-                    <!-- Contact Info End -->
+                        <div class="contact-info">Registered Add-1186, Gr. Floor, Sec-4B, <br> Vasundhara, Gzb. (U.P.)
+                            Branch office- KO-003, <br> Sector - 116, Noida, Opposite Ivory County  <br> <a href="mailto:hello@consulte.co"><i
+                                    class="fa-regular fa-envelope"></i> sarasrealty@gmail.com</a></div>
+                        <!-- Contact Info End -->
 
                     <!-- Footer Social Icons Start -->
                     <ul class="footer-social-icons social-media-link justify-content-center">
