--- a/index.html
+++ b/index.html
@@ -1396,10 +1396,7 @@
 
                         <!-- Contact Info Start -->
                         <div class="contact-info">Registered Add-1186, Gr. Floor, Sec-4B, <br> Vasundhara, Gzb. (U.P.)
-                            Branch office- KO-003, <br> Sector - 116, Noida, Opposite Ivory County <br> <a
-                                href="tel:+012-345-6789-00"><i class="fa-solid fa-phone-volume"></i>
-                                +91 9811021105,
-                                +91 9811021104</a> <br> <a href="mailto:hello@consulte.co"><i
+                            Branch office- KO-003, <br> Sector - 116, Noida, Opposite Ivory County  <br> <a href="mailto:hello@consulte.co"><i
                                     class="fa-regular fa-envelope"></i> sarasrealty@gmail.com</a></div>
                         <!-- Contact Info End -->
 
